// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with icon and caption 1`] = `
<button
  aria-pressed={undefined}
  className="button-2121099832"
  disabled={undefined}
  href={undefined}
  role="button"
  style={
    Object {
      "height": undefined,
      "textAlign": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="div-2772671"
    style={
      Object {
        "marginLeft": 0,
        "marginRight": 4,
      }
    }
  >
    plus
  </div>
  <div
    className="div-2772671"
  >
    Caption
  </div>
</button>
`;

exports[`renders with just caption 1`] = `
<button
  aria-pressed={undefined}
  className="button-2121099832"
  disabled={undefined}
  href={undefined}
  role="button"
  style={
    Object {
      "height": undefined,
      "textAlign": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="div-2772671"
  >
    OK
  </div>
</button>
`;

exports[`renders with just icon (element) 1`] = `
<button
  aria-pressed={undefined}
  className="button-2121099832"
  disabled={undefined}
  href={undefined}
  role="button"
  style={
    Object {
      "height": undefined,
      "textAlign": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="div-2772671"
    style={
      Object {
        "marginLeft": 0,
        "marginRight": 0,
      }
    }
  >
    <icon />
  </div>
</button>
`;

exports[`renders with just icon (text) 1`] = `
<button
  aria-pressed={undefined}
  className="button-2121099832"
  disabled={undefined}
  href={undefined}
  role="button"
  style={
    Object {
      "height": undefined,
      "textAlign": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="div-2772671"
    style={
      Object {
        "marginLeft": 0,
        "marginRight": 0,
      }
    }
  >
    plus
  </div>
</button>
`;
